[gd_scene load_steps=15 format=2]

[ext_resource path="res://MENU.gd" type="Script" id=1]
[ext_resource path="res://SEA.png" type="Texture" id=2]
[ext_resource path="res://SKY.png" type="Texture" id=3]
[ext_resource path="res://IKAR.png" type="Texture" id=4]
[ext_resource path="res://PLAY_1.png" type="Texture" id=5]
[ext_resource path="res://PLAY_0.png" type="Texture" id=6]
[ext_resource path="res://RELOAD_0.png" type="Texture" id=7]
[ext_resource path="res://RELOAD_1.png" type="Texture" id=8]
[ext_resource path="res://m5x7.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://HOME_0.png" type="Texture" id=10]
[ext_resource path="res://HOME_1.png" type="Texture" id=11]
[ext_resource path="res://song.wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 9 )

[node name="MENU" type="Node2D"]
script = ExtResource( 1 )

[node name="SKY" type="Sprite" parent="."]
position = Vector2( 128, 72 )
texture = ExtResource( 3 )

[node name="SEA" type="Sprite" parent="."]
position = Vector2( 128, 136 )
texture = ExtResource( 2 )

[node name="IKAR" type="Sprite" parent="."]
position = Vector2( 128, 32 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 88.0
margin_top = 56.0
margin_right = 168.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "HIGH SCORE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SCORE" type="Label" parent="."]
margin_left = 88.0
margin_top = 72.0
margin_right = 168.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
text = "***"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PLAY" type="TextureButton" parent="."]
margin_left = 88.0
margin_top = 96.0
margin_right = 120.0
margin_bottom = 128.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RESET" type="TextureButton" parent="."]
margin_left = 136.0
margin_top = 96.0
margin_right = 168.0
margin_bottom = 128.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EXIT" type="TextureButton" parent="."]
margin_left = 232.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 24.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MELODY" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true
[connection signal="button_up" from="PLAY" to="." method="_on_PLAY_button_up"]
[connection signal="button_up" from="RESET" to="." method="_on_RESET_button_up"]
[connection signal="button_up" from="EXIT" to="." method="_on_EXIT_button_up"]
[connection signal="finished" from="MELODY" to="." method="_on_MELODY_finished"]
